added top 10 section

--- a/templates/base.html
+++ b/templates/base.html
@@ -23,6 +23,7 @@
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
                 <li><a href="/countries">Countries</a></li>
+                <li><a href="/top_10">Top 10</a></li>
             </ul>
         </div>
     </div>
